tests/errors/e_cdef_missing_declarator.pyx
cdef int

cdef extern from *:
	void f(int)
_ERRORS = u"""
1:8: Empty declarator
"""
